overflow-x applied to general elements to remove scrolling bug

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 ﻿#root > div > div {
   z-index: 999999 !important;
-  overflow-x: hidden !important;
 }
 html {
   position: relative;
@@ -18,10 +17,20 @@ body {
 footer {
   position: relative;
   bottom: 0;
-  width: 100%;
+  max-width: 100%;
   height: 140px; /* Set the fixed height of the footer here */
+  overflow-x: hidden;
 }
-
+div,
+p,
+span,
+footer,
+nav,
+body,
+html,
+button {
+  overflow-x: hidden !important;
+}
 /* Override Bootstrap Styling */
 
 .btn-primary {
