--- a/src/assets/stylesheets/productShow.css
+++ b/src/assets/stylesheets/productShow.css
@@ -3,6 +3,8 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     padding: 2%;
+    max-width: 100%;
+    overflow-x: hidden;
   }
 
   .product-show-container .products--nav {
